--- a/app/src/main/res/navigation/accountnavigation.xml
+++ b/app/src/main/res/navigation/accountnavigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.example.myapplication.view.main.Main.AccountFragment"
+        android:name="com.example.myapplication.view.account.AccountFragment"
         android:label="AccountFragment" >
         <action
             android:id="@+id/action_accountFragment_to_item1fragment"
@@ -60,57 +60,57 @@
     </fragment>
     <fragment
         android:id="@+id/item10fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item10fragment"
+        android:name="com.example.myapplication.view.account.Item10fragment"
         android:label="item10fragment"
         tools:layout="@layout/item10fragment" />
     <fragment
         android:id="@+id/item11fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item11fragment"
+        android:name="com.example.myapplication.view.account.Item11fragment"
         android:label="item11fragment"
         tools:layout="@layout/item11fragment" />
     <fragment
         android:id="@+id/item1fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item1fragment"
+        android:name="com.example.myapplication.view.account.Item1fragment"
         android:label="item1fragment"
         tools:layout="@layout/item1fragment" />
     <fragment
         android:id="@+id/item2fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item2fragment"
+        android:name="com.example.myapplication.view.account.Item2fragment"
         android:label="item2fragment"
         tools:layout="@layout/item2fragment" />
     <fragment
         android:id="@+id/item3fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item3fragment"
+        android:name="com.example.myapplication.view.account.Item3fragment"
         android:label="item3fragment"
         tools:layout="@layout/item3fragment" />
     <fragment
         android:id="@+id/item4fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item4fragment"
+        android:name="com.example.myapplication.view.account.Item4fragment"
         android:label="item4fragment"
         tools:layout="@layout/item4fragment" />
     <fragment
         android:id="@+id/item5fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item5fragment"
+        android:name="com.example.myapplication.view.account.Item5fragment"
         android:label="item5fragment"
         tools:layout="@layout/item5fragment" />
     <fragment
         android:id="@+id/item6fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item6fragment"
+        android:name="com.example.myapplication.view.account.Item6fragment"
         android:label="item6fragment"
         tools:layout="@layout/item6fragment" />
     <fragment
         android:id="@+id/item7fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item7fragment"
+        android:name="com.example.myapplication.view.account.Item7fragment"
         android:label="item7fragment"
         tools:layout="@layout/item7fragment" />
     <fragment
         android:id="@+id/item8fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item8fragment"
+        android:name="com.example.myapplication.view.account.Item8fragment"
         android:label="item8fragment"
         tools:layout="@layout/item8fragment" />
     <fragment
         android:id="@+id/item9fragment"
-        android:name="com.example.myapplication.view.main.Menu.Item9fragment"
+        android:name="com.example.myapplication.view.account.Item9fragment"
         android:label="item9fragment"
         tools:layout="@layout/item9fragment" />
 </navigation>
