--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginfragment"
-        android:name="com.example.myapplication.view.main.Main.Loginfragment"
+        android:name="com.example.myapplication.view.Main.Loginfragment"
         android:label="login_fragment"
         tools:layout="@layout/login_fragment" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/voroodfragment"
-        android:name="com.example.myapplication.view.main.Voroodfragment"
+        android:name="com.example.myapplication.view.Main.Voroodfragment"
         android:label="vorood_fragment"
         tools:layout="@layout/vorood_fragment" >
         <action
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupfragment"
-        android:name="com.example.myapplication.view.main.Main.Signupfragment"
+        android:name="com.example.myapplication.view.Main.Signupfragment"
         android:label="Signupfragment" >
         <action
             android:id="@+id/action_signupfragment_to_verificationfragment"
@@ -36,7 +36,7 @@
     </fragment>
     <fragment
         android:id="@+id/verificationfragment"
-        android:name="com.example.myapplication.view.main.Main.Verificationfragment"
+        android:name="com.example.myapplication.view.Main.Verificationfragment"
         android:label="Verificationfragment" />
     <fragment
         android:id="@+id/acountFragment"
