--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -39,7 +39,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="32dp"
-        android:hint="کد ملی"
+        android:fontFamily="@font/font"
+        android:hint="  کد ملی"
         android:drawableRight="@drawable/lock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.7"
@@ -48,10 +49,12 @@
 
     <EditText
         android:id="@+id/idcustomer"
+        android:fontFamily="@font/font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:hint="شماره مشتری (اختیاری)"
+        android:drawableRight="@drawable/user_copy"
+        android:hint="  شماره مشتری (اختیاری)"
         app:layout_constraintEnd_toEndOf="@+id/id"
         app:layout_constraintStart_toStartOf="@+id/id"
         app:layout_constraintTop_toBottomOf="@+id/id" />
@@ -60,8 +63,10 @@
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:fontFamily="@font/font"
         android:layout_marginTop="28dp"
-        android:hint="ایمیل"
+        android:hint="ایمیل  "
+        android:drawableRight="@drawable/at"
         app:layout_constraintEnd_toEndOf="@+id/idcustomer"
         app:layout_constraintHorizontal_bias="0.704"
         app:layout_constraintStart_toStartOf="@+id/idcustomer"
@@ -71,9 +76,11 @@
         android:id="@+id/reference"
         android:layout_width="0dp"
         android:layout_height="46dp"
-        android:hint="کد معرف (اختیاری)"
+        android:fontFamily="@font/font"
+        android:hint="  کد معرف (اختیاری)"
+        android:drawableRight="@drawable/add_user"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/accept"
         app:layout_constraintEnd_toEndOf="@+id/email"
         app:layout_constraintHorizontal_bias="0.707"
         app:layout_constraintStart_toStartOf="@+id/email"
@@ -81,12 +88,13 @@
         app:layout_constraintVertical_bias="0.18" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/accept"
         android:layout_width="182dp"
         android:layout_height="47dp"
         android:layout_marginBottom="108dp"
         android:background="@drawable/button2"
-        android:text="ورود و ادامه"
+        android:fontFamily="@font/font"
+        android:text="تایید و ادامه"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
