--- a/app/src/main/res/layout/verification_fragment.xml
+++ b/app/src/main/res/layout/verification_fragment.xml
@@ -1,6 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:background="@color/gray"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/verification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/psd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/verificationtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/font"
+        android:gravity="center"
+        android:text="باشگاه مشتریان انصار"
+        android:textColor="@color/red"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/verification"
+        app:layout_constraintStart_toStartOf="@+id/verification"
+        app:layout_constraintTop_toBottomOf="@+id/verification" />
+
+    <EditText
+        android:id="@+id/phone"
+        android:fontFamily="@font/font"
+        android:layout_width="200dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="32dp"
+        android:hint="  تلفن همراه"
+        android:drawableRight="@drawable/smartphone_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/verificationtext" />
+
+    <EditText
+        android:id="@+id/name"
+        android:fontFamily="@font/font"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:drawableRight="@drawable/user_copy"
+        android:hint="  نام کاربری"
+        app:layout_constraintEnd_toEndOf="@+id/phone"
+        app:layout_constraintStart_toStartOf="@+id/phone"
+        app:layout_constraintTop_toBottomOf="@+id/phone" />
+
+    <EditText
+        android:id="@+id/pass1"
+        android:fontFamily="@font/font"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="28dp"
+        android:hint="  رمز عبور"
+        android:drawableRight="@drawable/lock"
+        app:layout_constraintEnd_toEndOf="@+id/name"
+        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintStart_toStartOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <EditText
+        android:id="@+id/pass2"
+        android:fontFamily="@font/font"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:hint="  تکرار رمز عبور"
+        android:drawableRight="@drawable/lock"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/sendmessage"
+        app:layout_constraintEnd_toEndOf="@+id/pass1"
+        app:layout_constraintHorizontal_bias="0.707"
+        app:layout_constraintStart_toStartOf="@+id/pass1"
+        app:layout_constraintTop_toBottomOf="@+id/pass1"
+        app:layout_constraintVertical_bias="0.18" />
+
+    <Button
+        android:id="@+id/sendmessage"
+        android:fontFamily="@font/font"
+        android:layout_width="182dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="108dp"
+        android:background="@drawable/button2"
+        android:text="ارسال کد فعال سازی"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
