--- a/app/src/main/res/navigation/accountnavigation.xml
+++ b/app/src/main/res/navigation/accountnavigation.xml
@@ -60,57 +60,57 @@
     </fragment>
     <fragment
         android:id="@+id/item10fragment"
-        android:name="com.example.myapplication.view.account.Item10fragment"
+        android:name="com.example.myapplication.view.account.AboutUsFragment"
         android:label="item10fragment"
         tools:layout="@layout/item10fragment" />
     <fragment
         android:id="@+id/item11fragment"
-        android:name="com.example.myapplication.view.account.Item11fragment"
+        android:name="com.example.myapplication.view.account.Exit"
         android:label="item11fragment"
         tools:layout="@layout/item11fragment" />
     <fragment
         android:id="@+id/item1fragment"
-        android:name="com.example.myapplication.view.account.Item1fragment"
+        android:name="com.example.myapplication.view.account.ProfileFragment"
         android:label="item1fragment"
         tools:layout="@layout/item1fragment" />
     <fragment
         android:id="@+id/item2fragment"
-        android:name="com.example.myapplication.view.account.Item2fragment"
+        android:name="com.example.myapplication.view.account.ManagecardFragment"
         android:label="item2fragment"
         tools:layout="@layout/item2fragment" />
     <fragment
         android:id="@+id/item3fragment"
-        android:name="com.example.myapplication.view.account.Item3fragment"
+        android:name="com.example.myapplication.view.account.CarnivalFragment"
         android:label="item3fragment"
         tools:layout="@layout/item3fragment" />
     <fragment
         android:id="@+id/item4fragment"
-        android:name="com.example.myapplication.view.account.Item4fragment"
+        android:name="com.example.myapplication.view.account.ServisFragment"
         android:label="item4fragment"
         tools:layout="@layout/item4fragment" />
     <fragment
         android:id="@+id/item5fragment"
-        android:name="com.example.myapplication.view.account.Item5fragment"
+        android:name="com.example.myapplication.view.account.ReportFragment"
         android:label="item5fragment"
         tools:layout="@layout/item5fragment" />
     <fragment
         android:id="@+id/item6fragment"
-        android:name="com.example.myapplication.view.account.Item6fragment"
+        android:name="com.example.myapplication.view.account.NewsFragment"
         android:label="item6fragment"
         tools:layout="@layout/item6fragment" />
     <fragment
         android:id="@+id/item7fragment"
-        android:name="com.example.myapplication.view.account.Item7fragment"
+        android:name="com.example.myapplication.view.account.InviteFragment"
         android:label="item7fragment"
         tools:layout="@layout/item7fragment" />
     <fragment
         android:id="@+id/item8fragment"
-        android:name="com.example.myapplication.view.account.Item8fragment"
+        android:name="com.example.myapplication.view.account.StarFragment"
         android:label="item8fragment"
         tools:layout="@layout/item8fragment" />
     <fragment
         android:id="@+id/item9fragment"
-        android:name="com.example.myapplication.view.account.Item9fragment"
+        android:name="com.example.myapplication.view.account.SupportFragment"
         android:label="item9fragment"
         tools:layout="@layout/item9fragment" />
 </navigation>
