--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -41,6 +41,7 @@
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/font"
         android:hint="  کد ملی"
+        android:textSize="12dp"
         android:drawableRight="@drawable/lock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.7"
@@ -53,6 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:textSize="12dp"
         android:drawableRight="@drawable/user_copy"
         android:hint="  شماره مشتری (اختیاری)"
         app:layout_constraintEnd_toEndOf="@+id/id"
@@ -65,7 +67,8 @@
         android:layout_height="45dp"
         android:fontFamily="@font/font"
         android:layout_marginTop="28dp"
-        android:hint="ایمیل  "
+        android:hint="  ایمیل "
+        android:textSize="12dp"
         android:drawableRight="@drawable/at"
         app:layout_constraintEnd_toEndOf="@+id/idcustomer"
         app:layout_constraintHorizontal_bias="0.704"
@@ -78,6 +81,7 @@
         android:layout_height="46dp"
         android:fontFamily="@font/font"
         android:hint="  کد معرف (اختیاری)"
+        android:textSize="12dp"
         android:drawableRight="@drawable/add_user"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/accept"
