--- a/app/src/main/res/layout/verification_fragment.xml
+++ b/app/src/main/res/layout/verification_fragment.xml
@@ -39,6 +39,7 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="32dp"
         android:hint="  تلفن همراه"
+        android:textSize="12dp"
         android:drawableRight="@drawable/smartphone_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.7"
@@ -53,6 +54,7 @@
         android:layout_marginTop="28dp"
         android:drawableRight="@drawable/user_copy"
         android:hint="  نام کاربری"
+        android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="@+id/phone"
         app:layout_constraintStart_toStartOf="@+id/phone"
         app:layout_constraintTop_toBottomOf="@+id/phone" />
@@ -64,6 +66,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:hint="  رمز عبور"
+        android:textSize="12dp"
         android:drawableRight="@drawable/lock"
         app:layout_constraintEnd_toEndOf="@+id/name"
         app:layout_constraintHorizontal_bias="0.704"
@@ -76,6 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:hint="  تکرار رمز عبور"
+        android:textSize="12dp"
         android:drawableRight="@drawable/lock"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/sendmessage"
