--- a/app/src/main/res/layout/secondverification_fragment.xml
+++ b/app/src/main/res/layout/secondverification_fragment.xml
@@ -76,7 +76,10 @@
         android:layout_height="38dp"
         android:fontFamily="@font/font"
         android:gravity="center"
+        app:counterEnabled="true"
+        app:counterMaxLength="60"
         android:text="ارسال مجدد"
+        android:id="@+id/again"
         android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
