--- a/app/src/main/res/layout/forget_pass_dialog_layout.xml
+++ b/app/src/main/res/layout/forget_pass_dialog_layout.xml
@@ -46,6 +46,7 @@
         android:layout_height="51dp"
         android:drawableRight="@drawable/group_6"
         android:hint=" کد ملی"
+        android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.869"
@@ -61,6 +62,7 @@
         android:text="  تایید  "
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:id="@+id/accept"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
