--- a/app/src/main/res/layout/verification_fragment.xml
+++ b/app/src/main/res/layout/verification_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@color/gray"
@@ -32,76 +33,68 @@
 
     <EditText
         android:id="@+id/phone"
-        android:fontFamily="@font/font"
         android:layout_width="200dp"
         android:layout_height="45dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="32dp"
-        android:hint="  تلفن همراه"
-        android:textSize="12dp"
         android:drawableRight="@drawable/smartphone_1"
+        android:fontFamily="@font/font"
+        android:hint="  تلفن همراه"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/sendmessage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verificationtext" />
+        app:layout_constraintTop_toBottomOf="@+id/verificationtext"
+        app:layout_constraintVertical_bias="0.32" />
 
     <EditText
         android:id="@+id/name"
-        android:fontFamily="@font/font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
         android:drawableRight="@drawable/user_copy"
-        android:hint="  نام کاربری"
-        android:textSize="12dp"
+        android:fontFamily="@font/font"
+        android:hint="  شماره ملی"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="@+id/phone"
         app:layout_constraintStart_toStartOf="@+id/phone"
         app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <EditText
         android:id="@+id/pass1"
-        android:fontFamily="@font/font"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginTop="28dp"
-        android:hint="  رمز عبور"
-        android:textSize="12dp"
         android:drawableRight="@drawable/lock"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintHorizontal_bias="0.704"
-        app:layout_constraintStart_toStartOf="@+id/name"
+        android:fontFamily="@font/font"
+        android:hint="  رمز عبور"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="@+id/phone"
+        app:layout_constraintStart_toStartOf="@+id/phone"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <EditText
         android:id="@+id/pass2"
-        android:fontFamily="@font/font"
         android:layout_width="0dp"
         android:layout_height="46dp"
-        android:hint="  تکرار رمز عبور"
-        android:textSize="12dp"
         android:drawableRight="@drawable/lock"
+        android:fontFamily="@font/font"
+        android:hint="  تکرار رمز عبور"
+        android:textSize="14dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/sendmessage"
-        app:layout_constraintEnd_toEndOf="@+id/pass1"
-        app:layout_constraintHorizontal_bias="0.707"
-        app:layout_constraintStart_toStartOf="@+id/pass1"
-        app:layout_constraintTop_toBottomOf="@+id/pass1"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintEnd_toEndOf="@+id/phone"
+        app:layout_constraintStart_toStartOf="@+id/phone"
+        app:layout_constraintTop_toBottomOf="@+id/pass1" />
 
     <Button
         android:id="@+id/sendmessage"
-        android:fontFamily="@font/font"
         android:layout_width="182dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginBottom="180dp"
         android:background="@drawable/button2"
+        android:fontFamily="@font/font"
         android:text="ارسال کد فعال سازی"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/phone"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/phone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
