--- a/app/src/main/res/layout/vorood_fragment.xml
+++ b/app/src/main/res/layout/vorood_fragment.xml
@@ -38,6 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/vorood1" />
 
     <EditText
+        android:text="1000000052"
         android:id="@+id/name"
         android:layout_width="184dp"
         android:layout_height="60dp"
@@ -55,6 +56,7 @@
 
 
     <EditText
+        android:text="Aa@12345"
         android:id="@+id/pass"
         android:layout_width="189dp"
         android:layout_height="52dp"
