--- a/app/src/main/res/layout/carnival_fragment.xml
+++ b/app/src/main/res/layout/carnival_fragment.xml
@@ -8,27 +8,25 @@
     android:layout_height="match_parent"
     android:background="@color/gray">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/Tabcarnival"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:theme="@style/AppTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.tabs.TabItem
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            app:tabTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/red"
+            app:tabIndicatorColor="@color/white"
+            app:tabIndicatorHeight="3dp" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-            />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            />
-
-    </com.google.android.material.tabs.TabLayout>
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/Pagercarnival"
         android:layout_width="match_parent"
